# AGNO-DEMO

./: README.md  pyproject.toml
01-Basic_Agents/: 01_app.py  02_agent_memory.py
01-Basic_Agents/tmp/lancedb/recipe_knowledge.lance/_transactions/: 0-c99ea5a4-9d69-4d8b-b34b-92cfb300b42b.txn  1-55ec3c21-5c5e-476a-bc6a-085bf0120907.txn  10-aaebba9b-dce5-45ef-8170-a83becd703c2.txn  11-ade849ab-1314-47ac-851f-17d1573e3e86.txn  12-0b1c734e-b86b-4c87-94fa-353f5bae74b8.txn  13-3c826cd7-6bab-4ec5-8d67-c93fb4e7c7f5.txn  14-88859d19-b803-44c7-87b6-8e6d24fa1a53.txn  2-5e891304-d11d-4cf3-a779-2da520c1e6cf.txn  3-9c6f4d91-8567-49a3-b402-cd71aae2e950.txn  4-a625701c-9cb2-49ba-b734-d3feea1e381a.txn  5-cce7e427-b1f8-4bfb-aede-6d6c64ac1f2f.txn  6-b24aa450-8805-4805-bbbe-533fe04eab3d.txn  7-ec5776e7-a204-4f29-b0c9-0c943dbde01b.txn  8-334f46d7-05c9-4170-b0f0-ca92784e8e98.txn  9-6d80c354-24e8-43af-8327-59c86637274e.txn
01-Basic_Agents/tmp/lancedb/recipe_knowledge.lance/data/: 099782c7-1f75-48f8-a497-9b255f131d3a.lance  1668a292-df60-4f9e-bf53-153ae42d9c23.lance  20028d6d-80fd-4c1a-a5e2-e8eb7c58b832.lance  44dd51ea-30ff-44f6-beb5-799f30124ea7.lance  52c0f792-e40c-42c4-9a9b-9adc5301860a.lance  56111221-eaa1-4d68-b4e8-0d750a4dfd76.lance  7bacc084-8a62-4df4-a8c8-c6dd727e25d1.lance  8d08816b-1d0f-4439-b9fe-27b3325eb1f6.lance  a0311e8c-1ccb-4cad-95d8-00aec189a975.lance  b557802c-c27a-4060-81a1-650132a5bc54.lance  ce4c66b3-b5ad-44bd-9a5a-a623cfb50bff.lance  dddf5b27-3226-422f-b5f7-c598709ccde3.lance  (+2 more)
02-MultiAgent/: 01_mutiagents.py
03-PlayGround/: playground.py
(+2 files in other folders)
