[project]
name = "agno-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.10",
    "cohere>=5.15.0",
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.115.12",
    "google-genai>=1.19.0",
    "huggingface-hub>=0.32.4",
    "lancedb>=0.23.0",
    "pandas>=2.3.0",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.61",
]
